--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<sonar.projectKey>elyesmazdour_oc-testing-java-cours</sonar.projectKey>
+		
+		<sonar.projectKey>elyesmazdour_parkingsystem develop</sonar.projectKey>
 		<sonar.organization>elyesmazdour</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
