--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		
-		<sonar.projectKey>elyesmazdour_parkingsystem develop</sonar.projectKey>
+		<sonar.projectKey>elyesmazdour_parkingsystem</sonar.projectKey>
 		<sonar.organization>elyesmazdour</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
